--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
   <div class="quiz-container">
     <h1>🧠 Dynamic Quiz</h1>
-    <p id="question" class="question-text"></p>
+    <p id="question" class="question-text"> There are a total of 10 questions. Each correct answer will increase your score by 1.</p>
     <form id="input" class="options-form">
     </form>
     <button onclick="showQuestions()" id="btn" class="btn">Start Quiz</button>
